# NOTE:
# 1. for display continuity sake please use 2 spaces instead of tabs
# 2. make sure that lines break at 80 chars for constricted display situations
#<-------------------------------- 80 chars ---------------------------------->#

2017-01-04 ede
  * PLUS add Map Coloring Plugin 0.5 (style by Five Color Theorem)

2017-01-03 mmichaud <m.michael.michaud@orange.fr>
  * Update Aggregation extension to 0.2.10 (fix bug in dialog initialization)

* release 1.10 Changes.txt updated until here***********************************

2016-12-30 Giuseppe Aruta <giuseppe_aruta@yahoo.it>
  * Updated Italian and Spanish Language files

2016-12-28 ede
  * make GML/JML reader cancellable and show already parsed featcount
  * upgrade to commons-io 2.5, commons-codec 1.10, commons-compress 1.12
    release notes assure backwards compatibility afa we are concerned

2016-12-28 mmichaud <m.michael.michaud@orange.fr>
  * fix #449 severe regression in "save project as" introduced in r5178

2016-12-19 mmichaud <m.michael.michaud@orange.fr>
  * fix #440 about shift-selection problem between layerView and attributePanel

2016-12-17 ede
  * upgrade commons-lang to version 3.5

2016-12-16 mmichaud <m.michael.michaud@orange.fr>
  * #447 fix illegal character writing in jml

2016-14-10 Giuseppe Aruta <giuseppe_aruta@yahoo.it>
  * Updated Italian Language file
  * RotateSelectedItemTool shows rotation center as point shape
    if this has been set (shift option)

2016-12-10 mmichaud <m.michael.michaud@orange.fr>
  * Sort the list of SRS in WMS layer SRS chooser + fix some I18N

2016-11-30 Giuseppe Aruta <giuseppe_aruta@yahoo.it>
  * New version of ColorChooser (0.8)
    - Added Color picker tool
    - Rewrite color panel to extend to 255 autocad Index colors
    - Tooltips now show correct color in 3 ways: 
      autocad Index color, hexadecimal and decimal RGB

2016-12-01 mmichaud <m.michael.michaud@orange.fr>
  * Create new layer was not active in Aggregation PlugIn (extension analysis)