@@ -3,6 +3,10 @@
 # 2. make sure that lines break at 80 chars for constricted display situations
 #<-------------------------------- 80 chars ---------------------------------->#
 
+2017-01-08 ede
+  * fix #450: Zoombar/Edittoolbox checkbox menu item de-synchronized when
+    toolbar is closed manually
+
 2017-01-04 ede
   * PLUS add Map Coloring Plugin 0.5 (style by Five Color Theorem)
 
